[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/ui/menu_bgs/menu_empty_background.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/buttons/button01.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/buttons/button02.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui/options_screen.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/fonts/Wildy Sans.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/buttons/button03.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/buttons/button02_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/buttons/button01_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/buttons/buttontheme.tres" type="Theme" id=14]

[sub_resource type="DynamicFont" id=7]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 53
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 53
font_data = ExtResource( 5 )

[node name="OptionsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="OptionsBackground" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Back" type="TextureButton" parent="."]
margin_left = 800.0
margin_top = 50.0
margin_right = 1120.0
margin_bottom = 170.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -38.0
margin_right = 61.0
margin_bottom = 38.0
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 7 )
text = "back"

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 780.0
margin_top = 400.0
margin_right = 1140.0
margin_bottom = 798.0

[node name="Keybindings" type="TextureButton" parent="Buttons"]
margin_right = 360.0
margin_bottom = 130.0
rect_min_size = Vector2( 360, 120 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 8 )
flip_h = true

[node name="Label" type="Label" parent="Buttons/Keybindings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -38.0
margin_right = 105.0
margin_bottom = 27.0
theme = ExtResource( 14 )
text = "Keybindings"
align = 1
valign = 1

[node name="Music" type="TextureButton" parent="Buttons"]
margin_top = 134.0
margin_right = 360.0
margin_bottom = 264.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 7 )

[node name="Label" type="Label" parent="Buttons/Music"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -42.0
margin_right = 127.0
margin_bottom = 23.0
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 8 )
text = "turn off music"
align = 1
valign = 1

[node name="Sound" type="TextureButton" parent="Buttons"]
margin_top = 268.0
margin_right = 360.0
margin_bottom = 398.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="Buttons/Sound"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -35.0
margin_right = 120.0
margin_bottom = 30.0
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 9 )
text = "turn off sfx"
align = 1
valign = 1

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Buttons/Keybindings" to="." method="_on_Keybindings_pressed"]
[connection signal="pressed" from="Buttons/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Buttons/Sound" to="." method="_on_Sound_pressed"]
